# PiCOLECO

./: PICOLECO_1.0a.uf2  PICOLECO_1.0b.uf2  PICOLECO_1.0c.uf2  PICOLECO_cart.uf2  README.md
3DModel/: PiColeco_cart-Bot (Meshed).stl  PiColeco_cart-Top (Meshed).stl  PiColeco_cart-Top.gcode
PCB/PiCOLECO/: Coleco-Card3-cache.lib  Coleco-Card3-rescue.kicad_sym  PiCOLECO.dsn  PiCOLECO.kicad_pcb  PiCOLECO.kicad_prl  PiCOLECO.kicad_pro  PiCOLECO.kicad_sch  PiCOLECO.pro  PiCOLECO.rules  PiCOLECO.sch  PiCOLECO.ses  fp-info-cache  fp-lib-table
PCB/PiCOLECO/jlcpcb/: project.db
PCB/PiCOLECO/jlcpcb/gerber/: PiCOLECO-CuBottom.gbr  PiCOLECO-CuTop.gbr  PiCOLECO-EdgeCuts.gbr  PiCOLECO-MaskBottom.gbr  PiCOLECO-MaskTop.gbr  PiCOLECO-NPTH.drl  PiCOLECO-PTH.drl  PiCOLECO-PasteBottom.gbr  PiCOLECO-PasteTop.gbr  PiCOLECO-SilkBottom.gbr  PiCOLECO-SilkTop.gbr  PiCOLECO-VScore.gbr
PCB/PiCOLECO/jlcpcb/production_files/: BOM-PiCOLECO.csv  CPL-PiCOLECO.csv
Source/CVBasic/: cv_logo.bas  splash.bas
Source/VSC-PICOLECO/: CMakeLists.txt  coleco_cart.c  coleco_cart.h  fatfs_disk.c  fatfs_disk.h  flash_fs.c  flash_fs.h  main.c  msc_disk.c  rom.h  usb_descriptors.c
